--- a/wp-content/themes/addlee/assets/scss/theme/_landingpage.scss
+++ b/wp-content/themes/addlee/assets/scss/theme/_landingpage.scss
@@ -283,14 +283,14 @@ section.esg {
                 background-position-x: -445px;
 
                 @media screen and (min-width: 776px) and ( max-width: 999px) {
-                    background-image: url('http://localhost/addisonlee2/wp-content/uploads/2024/02/mobile-res-multivan.jpg') !important;
+                    background-image: url('/wp-content/uploads/2024/02/mobile-res-multivan-1.jpg') !important;
                     background-position: 0px !important;
                     width: 350px;
                     height: 263px;
                 }
 
                 @media screen and (max-width: 775px) and ( min-width: 200px) {
-                    background-image: url('http://localhost/addisonlee2/wp-content/uploads/2024/02/mobile-res-multivan.jpg') !important;
+                    background-image: url('/wp-content/uploads/2024/02/mobile-res-multivan-1.jpg') !important;
                     background-position: 0px !important;
                     width: 350px;
                     height: 263px;
